tests/direct_dependent_files_cache/direct_dependent_files_cache.exp
== Initial there should be 2 errors ==
Error --------------------------------------------------------------------------------------------- src/dependent.js:4:2

Cannot cast `dependency` to string because boolean [1] is incompatible with string [2]. [incompatible-cast]

   src/dependent.js:4:2
   4| (dependency: string);
       ^^^^^^^^^^

References:
   src/node_modules/dependency.js:3:16
   3| export default true;
                     ^^^^ [1]
   src/dependent.js:4:14
   4| (dependency: string);
                   ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- src/unrelated.js:3:19

Cannot assign `123` to `x` because number [1] is incompatible with string [2]. [incompatible-type]

   src/unrelated.js:3:19
   3| const x: string = 123;
                        ^^^ [1]

References:
   src/unrelated.js:3:10
   3| const x: string = 123;
               ^^^^^^ [2]



Found 2 errors

== Delete unrelated.js and now there is 1 error ==
Error --------------------------------------------------------------------------------------------- src/dependent.js:4:2

Cannot cast `dependency` to string because boolean [1] is incompatible with string [2]. [incompatible-cast]

   src/dependent.js:4:2
   4| (dependency: string);
       ^^^^^^^^^^

References:
   src/node_modules/dependency.js:3:16
   3| export default true;
                     ^^^^ [1]
   src/dependent.js:4:14
   4| (dependency: string);
                   ^^^^^^ [2]



Found 1 error

 Resolved requires are unchanged

== Restore unrelated.js and back to 2 errors ==
Error --------------------------------------------------------------------------------------------- src/dependent.js:4:2

Cannot cast `dependency` to string because boolean [1] is incompatible with string [2]. [incompatible-cast]

   src/dependent.js:4:2
   4| (dependency: string);
       ^^^^^^^^^^

References:
   src/node_modules/dependency.js:3:16
   3| export default true;
                     ^^^^ [1]
   src/dependent.js:4:14
   4| (dependency: string);
                   ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- src/unrelated.js:3:19

Cannot assign `123` to `x` because number [1] is incompatible with string [2]. [incompatible-type]

   src/unrelated.js:3:19
   3| const x: string = 123;
                        ^^^ [1]

References:
   src/unrelated.js:3:10
   3| const x: string = 123;
               ^^^^^^ [2]



Found 2 errors

 Resolved requires are unchanged

== Delete src/node_modules/dependency.js changes an error ==
Error --------------------------------------------------------------------------------------------- src/dependent.js:4:2

Cannot cast `dependency` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   src/dependent.js:4:2
   4| (dependency: string);
       ^^^^^^^^^^

References:
   node_modules/dependency.js:3:16
   3| export default 123;
                     ^^^ [1]
   src/dependent.js:4:14
   4| (dependency: string);
                   ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- src/unrelated.js:3:19

Cannot assign `123` to `x` because number [1] is incompatible with string [2]. [incompatible-type]

   src/unrelated.js:3:19
   3| const x: string = 123;
                        ^^^ [1]

References:
   src/unrelated.js:3:10
   3| const x: string = 123;
               ^^^^^^ [2]



Found 2 errors

 Resolved requires changed

== Restore src/node_modules/dependency.js change it back ==
Error --------------------------------------------------------------------------------------------- src/dependent.js:4:2

Cannot cast `dependency` to string because boolean [1] is incompatible with string [2]. [incompatible-cast]

   src/dependent.js:4:2
   4| (dependency: string);
       ^^^^^^^^^^

References:
   src/node_modules/dependency.js:3:16
   3| export default true;
                     ^^^^ [1]
   src/dependent.js:4:14
   4| (dependency: string);
                   ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- src/unrelated.js:3:19

Cannot assign `123` to `x` because number [1] is incompatible with string [2]. [incompatible-type]

   src/unrelated.js:3:19
   3| const x: string = 123;
                        ^^^ [1]

References:
   src/unrelated.js:3:10
   3| const x: string = 123;
               ^^^^^^ [2]



Found 2 errors

 Resolved requires changed

== Remove the import from dependent.js ==
Error -------------------------------------------------------------------------------------------- src/unrelated.js:3:19

Cannot assign `123` to `x` because number [1] is incompatible with string [2]. [incompatible-type]

   src/unrelated.js:3:19
   3| const x: string = 123;
                        ^^^ [1]

References:
   src/unrelated.js:3:10
   3| const x: string = 123;
               ^^^^^^ [2]



Found 1 error

 Resolved requires changed

== Add the import back to dependent.js ==
Error --------------------------------------------------------------------------------------------- src/dependent.js:4:2

Cannot cast `dependency` to string because boolean [1] is incompatible with string [2]. [incompatible-cast]

   src/dependent.js:4:2
   4| (dependency: string);
       ^^^^^^^^^^

References:
   src/node_modules/dependency.js:3:16
   3| export default true;
                     ^^^^ [1]
   src/dependent.js:4:14
   4| (dependency: string);
                   ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- src/unrelated.js:3:19

Cannot assign `123` to `x` because number [1] is incompatible with string [2]. [incompatible-type]

   src/unrelated.js:3:19
   3| const x: string = 123;
                        ^^^ [1]

References:
   src/unrelated.js:3:10
   3| const x: string = 123;
               ^^^^^^ [2]



Found 2 errors

 Resolved requires changed

== Adding code that doesn't import has no effect on dep graph ==
Error --------------------------------------------------------------------------------------------- src/dependent.js:4:2

Cannot cast `dependency` to string because boolean [1] is incompatible with string [2]. [incompatible-cast]

   src/dependent.js:4:2
   4| (dependency: string);
       ^^^^^^^^^^

References:
   src/node_modules/dependency.js:3:16
   3| export default true;
                     ^^^^ [1]
   src/dependent.js:4:14
   4| (dependency: string);
                   ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- src/unrelated.js:3:19

Cannot assign `123` to `x` because number [1] is incompatible with string [2]. [incompatible-type]

   src/unrelated.js:3:19
   3| const x: string = 123;
                        ^^^ [1]

References:
   src/unrelated.js:3:10
   3| const x: string = 123;
               ^^^^^^ [2]



Found 2 errors

 Resolved requires are unchanged
